--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,6 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 *.dwlt
+Voh mini game/Library/ArtifactDB
+Voh mini game/Library/shadercompiler-UnityShaderCompiler.exe0.log
+Voh mini game/Library/SourceAssetDB
