--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,4 @@ crashlytics-build.properties
 Voh mini game/Library/ArtifactDB
 Voh mini game/Library/shadercompiler-UnityShaderCompiler.exe0.log
 Voh mini game/Library/SourceAssetDB
+*.dwlt
