added all logs to .gitignore
Updating .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,4 @@ Voh mini game/Library/ArtifactDB
 Voh mini game/Library/shadercompiler-UnityShaderCompiler.exe0.log
 Voh mini game/Library/SourceAssetDB
 *.dwlt
+*.log
