--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,4 @@ Voh mini game/Library/shadercompiler-UnityShaderCompiler.exe0.log
 Voh mini game/Library/SourceAssetDB
 *.dwlt
 *.log
+Voh mini game/Library/SourceAssetDB
