--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,8 @@ Voh mini game/Library/SourceAssetDB
 *.dwlt
 *.log
 Voh mini game/Library/SourceAssetDB
+Vietcong 2.0/Library/ArtifactDB
+Vietcong 2.0/Library/ArtifactDB
+Vietcong 2.0/Library/ArtifactDB
+Vietcong 2.0/Library/SourceAssetDB
+Vietcong 2.0/Library/SourceAssetDB
