--- a/Vietcong 2.0/.gitignore
+++ b/Vietcong 2.0/.gitignore
@@ -70,9 +70,9 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 *.dwlt
-Voh mini game/Library/ArtifactDB
-Voh mini game/Library/shadercompiler-UnityShaderCompiler.exe0.log
-Voh mini game/Library/SourceAssetDB
+Vietcong 2.0/Library/ArtifactDB
+Vietcong 2.0/Library/shadercompiler-UnityShaderCompiler.exe0.log
+Vietcong 2.0/Library/SourceAssetDB
 *.dwlt
 *.log
-Voh mini game/Library/SourceAssetDB
+Vietcong 2.0/Library/SourceAssetDB
