--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ Vietcong 2.0/Library/ArtifactDB
 Vietcong 2.0/Library/ArtifactDB
 Vietcong 2.0/Library/ArtifactDB
 Vietcong 2.0/Library/ArtifactDB
+Vietcong 2.0/Library/SourceAssetDB
+Vietcong 2.0/Library/StateCache/Hierarchy/de80d7-mainStage.json
