--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ Vietcong 2.0/Library/ArtifactDB
 Vietcong 2.0/Library/SourceAssetDB
 Vietcong 2.0/Library/StateCache/Hierarchy/de80d7-mainStage.json
 Vietcong 2.0/Library/SourceAssetDB
+Vietcong 2.0/Library/SourceAssetDB
