--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ Vietcong 2.0/Library/SourceAssetDB
 Vietcong 2.0/Library/StateCache/Hierarchy/de80d7-mainStage.json
 Vietcong 2.0/Library/SourceAssetDB
 Vietcong 2.0/Library/SourceAssetDB
+Vietcong 2.0/Library/ArtifactDB
+Vietcong 2.0/Library/ArtifactDB
