Desciption + Ready button
- Added in a description that explains what the minigame is about.
- Added in a ready button that once a player presses the ready button the game will start.
FIXING!!!
- Hide playername while description panel is still active.

--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,5 @@ Vietcong 2.0/Library/SourceAssetDB
 *.dwlt
 *.log
 Vietcong 2.0/Library/SourceAssetDB
+Vietcong 2.0/Library/SourceAssetDB
+Vietcong 2.0/Library/ArtifactDB
