Fixed UI Display Desciption + Player name
Fixed issue where playername was shown through the description panel.
Playername is now disabled until the description panel gets disabled.

--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,5 @@ Vietcong 2.0/Library/SourceAssetDB
 Vietcong 2.0/Library/SourceAssetDB
 Vietcong 2.0/Library/SourceAssetDB
 Vietcong 2.0/Library/ArtifactDB
+Vietcong 2.0/Library/ArtifactDB
+Vietcong 2.0/Library/SourceAssetDB
