--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,5 @@ Vietcong 2.0/Library/SourceAssetDB
 Vietcong 2.0/Library/ArtifactDB
 Vietcong 2.0/Library/ArtifactDB
 Vietcong 2.0/Library/SourceAssetDB
+Vietcong 2.0/Library/ArtifactDB-lock
+Vietcong 2.0/Library/SourceAssetDB-lock
